<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_status_monitor</name>
  <version>0.0.1</version>
  <description>Vehicle Status Monitor</description>
  <maintainer email="saurabh@futuristicbots.com">vijay</maintainer>
  <license>Apache-2.0</license> <!-- Corrected typo in license -->

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend> <!-- Corrected to match Python test framework -->

  <export>
    <build_type>ament_python</build_type> <!-- Removed ament_cmake for consistency -->
  </export>
</package>

