<?xml version="1.0"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.0.1</version>
  <description>A ROS 2 package bridging ROS topics and MQTT.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>paho-mqtt</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

